@@ -76,6 +76,7 @@ export DOVECOT_PGSQL_CONF="${DOVECOT_CONF_DIR}/dovecot-pgsql.conf"
 export DOVECOT_REALTIME_QUOTA_CONF="${DOVECOT_CONF_DIR}/dovecot-used-quota.conf"
 export DOVECOT_SHARE_FOLDER_CONF="${DOVECOT_CONF_DIR}/dovecot-share-folder.conf"
 export DOVECOT_MASTER_USER_PASSWORD_FILE="${DOVECOT_CONF_DIR}/dovecot-master-users"
+export DOVECOT_MASTER_USER_DOMAIN='not-exist.com'
 
 # Log & logrotate files.
 export DOVECOT_LOG_FILE='/var/log/dovecot.log'
